fixed some minor styling issues for better readability/mobile performance

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -113,6 +113,10 @@ i{
     color: #fff952;
 }
 
+#resume {
+color: #fff952;
+}
+
 em {
     font-size: 65px;
 }
